# vector-merkle-tree

./: .npmignore  Cargo.toml  LICENSE  README.md  build.sh  package.json
scripts/: prepare.sh
src/: error.rs  format.rs  hash.rs  lib.rs  test_utils.rs
